# mandelbrot_opencl

./: .gitignore  Cargo.toml  README.md  main_cp.rs  ~
src/: main.rs
