[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Erkan <erkan808987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.2.4"
image = "0.23.5"
palette = "0.5.0"
ggez = "0.5.1"
ocl = "0.19"
rayon = "1.3.0"
